# strata-bridge-poc

./: .gitignore  .sample_env  CONTRIBUTING.md  Cargo.lock.bak  Cargo.toml  Makefile  README.md  claim.tx  claim.tx.raw  run.log.1730972376  run.log.1730972711  run.log.1730973008  run.log.1730975942  run.log.1730976632  run.log.1730978097  run.log.1730978490  run.log.1730978620  run.log.1730978781  run.log.1730978826  run.log.1730978886  run.log.1730978906  run.log.1730978992  run.log.1730979014  run.log.1730979032  run.log.1730979052  run.log.1730979133  run.log.1730979211  run.log.1730979231  run.log.1730979285  run.log.1730979338  run.log.1730979353  run.log.1730979392  run.log.1730979420  run.log.1730979503  run.log.1730979549  run.log.1730980221  run.log.1730980730  run.log.1730981066  run.log.1730981584  run.log.1730982494  (+15 more)
.github/workflows/: compile.yml  dependencies.yml  docs.yml  functional.yml  integration.yml  lint.yml  mutants.yml  security.yml  unit.yml
bridge-guest-builder/: Cargo.toml  build.rs
bridge-guest-builder/bridge-guest/: Cargo.toml
bridge-guest-builder/bridge-guest/src/: main.rs
bridge-proofs/: Cargo.toml  build.rs
bridge-proofs/guest-bridge/: Cargo.toml
bridge-proofs/guest-bridge/src/: main.rs
crates/agent/: .gitignore  Cargo.toml
crates/agent/src/: base.rs  bitcoin_watcher.rs  duty_watcher.rs  lib.rs  operator.rs  proof_interop.rs  signal.rs  verifier.rs
crates/bridge-proof/protocol/: Cargo.toml
crates/bridge-proof/protocol/src/: lib.rs  primitives.rs  statement.rs
crates/bridge-proof/snark/: Cargo.toml
crates/bridge-proof/snark/src/: bridge_poc.rs  lib.rs  prover.rs  sp1.rs  verifier.rs
crates/bridge-proof/test-utils/: Cargo.toml
crates/bridge-proof/test-utils/src/: lib.rs
crates/btcio/: Cargo.toml
crates/btcio/src/: bitcoind.rs  client.rs  constants.rs  error.rs  esplora.rs  lib.rs  traits.rs  types.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/chain/: base.rs  event.rs
crates/client/src/data_store/: aws_s3.rs  mod.rs  sftp.rs  store.rs
crates/client/src/data_store/ftp_provider/: ftp.rs  ftps.rs  lib.rs
crates/contexts/: Cargo.toml
crates/contexts/src/: base.rs  depositor.rs  lib.rs  operator.rs  verifier.rs  withdrawer.rs
crates/db/: Cargo.toml
crates/db/src/: connector_db.rs  constants.rs  lib.rs  operator.rs  persistence.rs  public.rs  tracker.rs
crates/db/src/inmemory/: mod.rs  operator.rs  prelude.rs  public.rs  tracker.rs
crates/db/src/persistence/sqlite/: mod.rs
crates/db/src/persistent/: mod.rs  prelude.rs  sqlite.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: bitcoin.rs  build_context.rs  deposit.rs  duties.rs  helpers.rs  lib.rs  partial_verifier_scripts.rs  signal.rs  types.rs  withdrawal.rs  wots.rs
crates/primitives/src/params/: connectors.rs  mod.rs  prelude.rs  strata.rs  tx.rs
crates/primitives/src/scripts/: commitments.rs  general.rs  mod.rs  parse_witness.rs  prelude.rs  taproot.rs  transform.rs  wots.rs
crates/primitives/src/scripts/sp1g16/: mod.rs
crates/proof-impl/bitvm-bridge/: Cargo.toml
crates/proof-impl/bitvm-bridge/src/: bridge_proof.rs  ckp_verifier.rs  l1_sement.rs  lib.rs  primitives.rs  process.rs
crates/proof-impl/bitvm-bridge/src/bitcoin/: checkpoint.rs  claim_txn.rs  header_chain.rs  mod.rs  payment_txn.rs  primitives.rs
crates/proof-impl/bitvm-bridge/src/treepp/: mod.rs
crates/proof-impl/prover/: Cargo.toml
crates/proof-impl/prover-manager/: Cargo.toml
crates/proof-impl/prover-manager/src/: lib.rs  prover.rs  verifier.rs
crates/proof-impl/prover/src/: prover.rs
crates/proof-impl/test-utils/: Cargo.toml
crates/proof-impl/test-utils/src/: lib.rs
crates/rpc/bridge/: Cargo.toml
crates/rpc/bridge/src/: lib.rs
crates/rpc/strata/: Cargo.toml
crates/rpc/strata/src/: lib.rs
crates/task-manager/: Cargo.toml
crates/task-manager/src/: config.rs  lib.rs  operator.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: bitcoind.rs  lib.rs
crates/tx-graph/: Cargo.toml
crates/tx-graph/src/: commitments.rs  constants.rs  db.rs  lib.rs  partial_verification_scripts.rs  peg_out_graph.rs  scripts.rs  serialization.rs  treepp.rs  utils.rs
crates/tx-graph/src/connectors/: connector.rs  connector_2.rs  connector_4.rs  connector_a0.rs  connector_a1.rs  connector_a30.rs  connector_a31.rs  connector_b.rs  connector_c0.rs  connector_c1.rs  connector_cpfp.rs  connector_k.rs  connector_s.rs  connector_z.rs  connectors_a.rs  constants.rs  mod.rs  params.rs  prelude.rs
crates/tx-graph/src/graphs/: peg_in.rs  peg_out.rs
crates/tx-graph/src/scripts/: general.rs  mod.rs  parse_witness.rs  prelude.rs  taproot.rs  transform.rs
crates/tx-graph/src/transactions/: assert.rs  assert_chain.rs  assert_data.rs  base.rs  bridge_out.rs  challenge.rs  claim.rs  constants.rs  covenant_tx.rs  disprove.rs  disprove_chain.rs  kick_off.rs  kickoff.rs  mod.rs  payout.rs  payout_optimistic.rs  peg_in_confirm.rs  peg_in_deposit.rs  peg_in_refund.rs  peg_out.rs  post_assert.rs  pre_assert.rs  pre_signed.rs  pre_signed_musig2.rs  prelude.rs  signing.rs  signing_musig2.rs  start_time.rs  start_time_timeout.rs
migrations/: 20241111122539_init_schema.sql  20241111185511_init_schema.sql  20241113060253_init_schema.sql
