[workspace]
members = [
  "crates/agent",
  "crates/btcio",
  "crates/db",
  "crates/primitives",
  "crates/bridge-proof/protocol",
  "crates/bridge-proof/snark",
  "crates/rpc/bridge",
  "crates/rpc/strata",
  "crates/bridge-proof/test-utils",
  "crates/tx-graph",
  "bridge-guest-builder",

  # binaries listed separately
  "bin/strata-bridge",
  "bin/dev-cli",

  # test utilities
  "crates/test-utils",
]

default-members = ["bin/strata-bridge", "bin/dev-cli"]

resolver = "2"

[workspace.dependencies]
# deps in this workspace
prover-test-utils = { path = "crates/bridge-proof/test-utils" }
strata-bridge-agent = { path = "crates/agent" }
strata-bridge-btcio = { path = "crates/btcio" }
strata-bridge-db = { path = "crates/db" }
strata-bridge-guest-builder = { path = "bridge-guest-builder" }
strata-bridge-primitives = { path = "crates/primitives" }
strata-bridge-proof-protocol = { path = "crates/bridge-proof/protocol" }
strata-bridge-proof-snark = { path = "crates/bridge-proof/snark" }
strata-bridge-rpc = { path = "crates/rpc/bridge" }
strata-bridge-test-utils = { path = "crates/test-utils" }
strata-bridge-tx-graph = { path = "crates/tx-graph" }
strata-rpc = { path = "crates/rpc/strata" }

# deps from original strata repo
strata-bridge-tx-builder = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-common = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-primitives = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-rpc-types = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-sp1-adapter = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-state = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-tx-parser = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }
strata-zkvm = { git = "https://github.com/alpenlabs/strata.git", branch = "bitvm2" }

# external deps
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
ark-bn254 = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
ark-relations = { git = "https://github.com/arkworks-rs/snark/" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
async-trait = "0.1.81"
base64 = "0.22.1"
bincode = "1.3.3"
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
bitcoin-script = { git = "https://github.com/alpenlabs/rust-bitcoin-script", branch = "strata-bridge-poc-bitcoin-0.32.5" }
bitvm = { git = "https://github.com/alpenlabs/BitVM.git", branch = "bridge-poc" }
borsh = { version = "1.5.0", features = ["derive"] }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
dotenvy = "0.15.7"
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client", default-features = false, features = [
  "blocking-https-rustls",
  "async-https-rustls",
] }
ethnum = "1.5.0"
hex = { version = "0.4", features = ["serde"] }
jsonrpsee = "0.23"
jsonrpsee-types = "0.23"
lazy_static = "1.5.0"
musig2 = { version = "0.1.0", features = [
  "serde",
  "rand",
] } # can't be updated without updating bitcoin
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
rkyv = "0.8.8"
secp256k1 = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
sha2 = "0.10"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "json",
  "macros",
  "derive",
  "migrate",
] }
tempfile = "3.10.1"
thiserror = "2.0.3"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3

[patch.crates-io]
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-poly = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-serialize = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-bn254 = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }
ark-relations = { git = "https://github.com/arkworks-rs/snark/" }
ark-snark = { git = "https://github.com/arkworks-rs/snark/" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
