[package]
edition = "2021"
name = "strata-bridge-guest"
version = "0.1.0"

[workspace]

[dependencies]
borsh = { version = "1.5.0", features = ["derive"] }
sp1-zkvm = { version = "3.0.0", features = ["verify"] }
strata-bridge-proof-protocol = { path = "../../crates/bridge-proof/protocol" }


[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
