[package]
edition = "2021"
name = "guest-bridge"
version = "0.1.0"

[workspace]

[dependencies]
sp1-zkvm = { version = "2.0.0", features = ["verify"] }
strata-proofimpl-bitvm-bridge = { path = "../../crates/proof-impl/bitvm-bridge" }

[patch.crates-io]
base58check = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm" }
bitcoin_hashes = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm" }
bitcoin-internals = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
