[package]
edition = "2021"
name = "strata-bridge-agent"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
# rust.unreachable_pub = "warn"
# rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
strata-bridge-btcio.workspace = true
strata-bridge-db.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof-protocol.workspace = true
strata-bridge-proof-snark = { workspace = true, features = ["prover"] }
strata-bridge-tx-graph.workspace = true
strata-rpc = { workspace = true, features = ["client"] }

strata-bridge-tx-builder.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-tx-parser.workspace = true

anyhow.workspace = true
bincode.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoin-script = { workspace = true }
bitcoin-scriptexec = { workspace = true }
bitvm = { workspace = true }
borsh = { workspace = true }
esplora-client.workspace = true
hex.workspace = true
jsonrpsee.workspace = true
lazy_static.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
