[package]
edition = "2021"
name = "strata-btcio"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bitcoin.workspace = true
borsh.workspace = true
bytes.workspace = true
esplora-client = { workspace = true, default-features = false, features = [
  "async-https-rustls",
] }
hex.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
threadpool.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-common.workspace = true
strata-test-utils.workspace = true
