[package]
edition = "2021"
name = "strata-bridge-btcio"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bitcoin.workspace = true
esplora-client = { workspace = true, default-features = false, features = [
  "async-https-rustls",
] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
strata-common.workspace = true
strata-bridge-test-utils.workspace = true
