[package]
edition = "2021"
name = "strata-bridge-client"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
strata-bridge-contexts.workspace = true
strata-bridge-tx-graph.workspace = true

async-trait.workspace = true
aws-sdk-s3.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
dotenvy.workspace = true
esplora-client.workspace = true
futures.workspace = true
musig2 = { workspace = true, features = ["serde"] }
once_cell.workspace = true
openssh = { workspace = true, features = ["native-mux"] }
openssh-sftp-client = { workspace = true, features = ["openssh"] }
regex.workspace = true
serde.workspace = true
suppaftp = { workspace = true, features = ["async", "async-native-tls"] }
tokio.workspace = true
