[package]
edition = "2021"
name = "strata-bridge-db"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
strata-bridge-primitives.workspace = true

async-trait.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
musig2 = { workspace = true, features = ["serde"] }
rkyv.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
