[package]
edition = "2021"
name = "strata-bridge-tx-graph"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
# rust.unreachable_pub = "warn"
# rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
anyhow.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoin-script = { workspace = true }
bitcoin-scriptexec = { workspace = true }
bitvm = { workspace = true }
esplora-client.workspace = true
hex = { version = "0.4.3" }
lazy_static.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
hex.workspace = true
