[package]
edition = "2021"
name = "strata-bridge-proof-snark"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
bincode.workspace = true
bitcoin.workspace = true
bitcoin-script.workspace = true
bitvm.workspace = true
borsh.workspace = true
hex.workspace = true
lazy_static.workspace = true
num-bigint = "0.4.6"
num-traits = "0.2.19"
rs_merkle = { version = "1.4.2", default-features = false }
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
sp1-sdk = "3.0.0"
sp1-verifier = { version = "3.2.1" }
strata-bridge-guest-builder.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof-protocol.workspace = true
strata-primitives.workspace = true
strata-sp1-adapter.workspace = true
strata-state.workspace = true
strata-zkvm.workspace = true
tracing.workspace = true

[features]
prover = ["strata-sp1-adapter/prover", "strata-bridge-guest-builder/prover"]
