[package]
edition = "2021"
name = "strata-proofimpl-bitvm-bridge"
version = "0.1.0"

[dependencies]
bitcoin = { workspace = true }
bitvm = { git = "https://github.com/alpenlabs/BitVM.git", branch = "bridge-poc", default-features = false }
borsh.workspace = true
serde = { workspace = true, features = ["derive"] }
strata-primitives.workspace = true
strata-state.workspace = true
strata-zkvm.workspace = true
