[package]
edition = "2021"
name = "strata-proofimpl-bitvm-bridge"
version = "0.1.0"

[dependencies]
bitcoin = { workspace = true }
bitcoin-script = { workspace = true }
bitcoin-scriptexec = { workspace = true }
borsh.workspace = true
serde = { workspace = true, features = ["derive"] }
strata-primitives.workspace = true
strata-state.workspace = true
strata-zkvm.workspace = true
