[package]
edition = "2021"
name = "strata-prover-manager"
version = "0.1.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
borsh.workspace = true
strata-state.workspace = true
strata-primitives.workspace = true
strata-zkvm.workspace = true
bitcoin.workspace = true
strata-bridge-guest-builder.workspace = true
strata-sp1-adapter.workspace = true
anyhow.workspace = true
hex.workspace = true
sp1-sdk = "2.0.0"
bincode.workspace = true
num-bigint = "0.4.6"
num-traits = "0.2.19"


[features]
prover = ["strata-sp1-adapter/prover", "strata-bridge-guest-builder/prover"]
