[package]
edition = "2021"
name = "prover-test-utils"
version = "0.1.0"

[dependencies]
bitcoin = { version = "=0.32.3", features = ["serde"] }
borsh.workspace = true
serde = { workspace = true, features = ["derive"] }
snark-bn254-verifier = { git = "https://github.com/succinctlabs/snark-bn254-verifier.git", rev = "96bce2079584b68597f3241551e4b97300fd92c6" } # Note: This is unstable
sp1-core-machine = "3.0.0"
strata-primitives.workspace = true
strata-state.workspace = true
strata-zkvm.workspace = true
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.7.0" }
strata-tx-parser = { git = "https://github.com/alpenlabs/strata.git", branch = "fix/add-getters-for-withdrawal-info-fields" }
strata-proofimpl-btc-blockspace = { git = "https://github.com/alpenlabs/strata.git", branch = "fix/add-getters-for-withdrawal-info-fields" }
tokio.workspace = true
tower = { version = "0.4.13", features = ["util"] }
strata-btcio = { git = "https://github.com/alpenlabs/strata.git", branch = "fix/add-getters-for-withdrawal-info-fields" }
