[package]
edition = "2021"
name = "strata-bridge-rpc"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros", "tokio"] }

[features]
default = []
client = ["jsonrpsee/client"]
